# openCONFIGURATOR_TclTkGui

./: .gitignore  CMakeLists.txt  License.txt  Readme.txt  childWindows.tcl  console.tcl  displayErrorMsg.bat  notebookManager.tcl  openCONFIGURATOR  openCONFIGURATOR.bat  openConfAPI.tcl  operations.tcl  option.tcl  validation.tcl  version.tcl  wrapperInteractions.tcl
cmake/linux/: linux.cmake  postinst.in  postrm.in  preinst.in
cmake/windows/: windows.cmake
linux/cmake/: linux.cmake  postinst.in  postrm.in  preinst.in
linux/configurations/: openCONFIGURATOR.desktop  openCONFIGURATOR.sh  openCONFIGURATOR_unversioned.desktop  package.info.conf
linux/tools/precise/amd64/: txt2cdc
linux/tools/precise/i386/: txt2cdc
linux/tools/trusty/amd64/: txt2cdc
linux/tools/trusty/i386/: txt2cdc
resources/: boost_log_settings.ini  openPOWERLINK_MN.xdd
resources/OC_ProjectFile/: openCONFIGURATOR.xsd
tcl-sources/: childWindows.tcl  console.tcl  notebookManager.tcl  openConfAPI.tcl  openConfProjectUpgradeAPI.tcl  operations.tcl  projectUpgradeWindow.tcl  validation.tcl  version.tcl  wrapperInteractions.tcl
windows/cmake/: windows.cmake
windows/tools/: displayErrorMsg.bat  openCONFIGURATOR.bat
