################################################################################
#
# Project: openCONFIGURATOR-TclTk
#
# (c) 2014 Kalycito Infotech Pvt Ltd., http://kalycito.com
#
# Description: Main CMake file of openconfigurator-tcltk package
#
# License:
#   Redistribution and use in source and binary forms, with or without
#   modification, are permitted provided that the following conditions
#   are met:
#
#   1. Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#
#   2. Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the following disclaimer in the
#      documentation and/or other materials provided with the distribution.
#
#   3. Neither the name of the copyright holders nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without prior written permission. For written
#      permission, please contact info@kalycito.com.
#
#   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
#   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
#   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
#   FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
#   COPYRIGHT HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
#   INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
#   BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
#   LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
#   CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
#   LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
#   ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
#   POSSIBILITY OF SUCH DAMAGE.
#
#   Severability Clause:
#
#       If a provision of this License is or becomes illegal, invalid or
#       unenforceable in any jurisdiction, that shall not affect:
#       1. the validity or enforceability in that jurisdiction of any other
#          provision of this License; or
#       2. the validity or enforceability in other jurisdictions of that or
#          any other provision of this License.
#
################################################################################

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.8)

INCLUDE(CMakeDependentOption)

PROJECT (openconfigurator-tcltk)
#INCLUDE(InstallRequiredSystemLibraries)
SET(ORG_PROJECT_NAME "openCONFIGURATOR")


SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "4")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/Readme.txt")
SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_CURRENT_SOURCE_DIR}/Readme.txt")

SET(CPACK_PACKAGE_DESCRIPTION "TclTk user Interface for openCONFIGURATOR")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GUI for openconfigurator library using tcltk")

SET(CPACK_PACKAGE_CONTACT "Powerlink team <powerlink-team@kalycito.com>")
SET(PROJECT_HOMEPAGE "http://sourceforge.net/projects/openconf")
SET(CPACK_PACKAGE_VENDOR "Kalycito")

FILE(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/version.tcl" "# AutoGenerated file. Change version only in cmake file.\n"
	"global version\nset version ${CPACK_PACKAGE_VERSION}")

IF(WIN32)
	INCLUDE(cmake/windows/windows.cmake)
ELSE()
	INCLUDE(cmake/linux/linux.cmake)
ENDIF()


SET(PACKAGE_EXCLUDE_GENERAL "/\\.git/|/\\build/|/\\cmake/|.nsi|CMakeLists.txt|Makefile.in|~|.gitignore")

INSTALL(DIRECTORY .
        DESTINATION ${CPACK_PACKAGE_DEFAULT_LOCATION}
        REGEX "${PACKAGE_EXCLUDE_GENERAL}|${PACKAGE_EXCLUDE_PLATFORM}" EXCLUDE)

INCLUDE(CPack)
