################################################################################
# \file   CMakeLists.txt
#
# \brief  Main CMake file of openCONFIGURATOR-TclTk package
#
# \copyright (c) 2014, Kalycito Infotech Private Limited
#                    All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#   * Redistributions of source code must retain the above copyright
#     notice, this list of conditions and the following disclaimer.
#   * Redistributions in binary form must reproduce the above copyright
#     notice, this list of conditions and the following disclaimer in the
#     documentation and/or other materials provided with the distribution.
#   * Neither the name of the copyright holders nor the
#     names of its contributors may be used to endorse or promote products
#     derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL COPYRIGHT HOLDERS BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
################################################################################

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.7)

INCLUDE(CMakeDependentOption)

PROJECT (openCONFIGURATOR)

################################################################################
# Directory related information
################################################################################
SET(OPENCONF_TCL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(OPENCONF_TCL_SOURCE_DIR "${OPENCONF_TCL_ROOT_DIR}/tcl-sources")
SET(OPENCONF_IMAGES_DIR "${OPENCONF_TCL_ROOT_DIR}/images")

################################################################################
# Auto generate version information
################################################################################
SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "4")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

FILE(WRITE "${OPENCONF_TCL_SOURCE_DIR}/version.tcl" "# AutoGenerated file. Change the version only in cmake file.\n"
    "global version\nset version ${CPACK_PACKAGE_VERSION}\n")

################################################################################
# Set other required information for a package.
################################################################################
SET(CPACK_RESOURCE_FILE_LICENSE "${OPENCONF_TCL_ROOT_DIR}/License.txt")
SET(CPACK_RESOURCE_FILE_README "${OPENCONF_TCL_ROOT_DIR}/Readme.txt")
SET(CPACK_RESOURCE_FILE_WELCOME "${OPENCONF_TCL_ROOT_DIR}/Readme.txt")

SET(CPACK_PACKAGE_DESCRIPTION "TclTk user interface for openCONFIGURATOR")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "This package provides a TCL/TK based user interface for the openCONFIGURATOR.")

SET(CPACK_PACKAGE_CONTACT "Powerlink Team <powerlink-team@kalycito.com>")
SET(PROJECT_HOMEPAGE "http://sourceforge.net/projects/openconf")
SET(CPACK_PACKAGE_VENDOR "Kalycito Infotech Private Limited")


################################################################################
# Setup the architecture specific definitions
################################################################################
IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET(PACKAGE_EXCLUDE_GENERAL "windows")
    INCLUDE(linux/cmake/linux.cmake)
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    SET(PACKAGE_EXCLUDE_GENERAL "linux")
    INCLUDE(windows/cmake/windows.cmake)
ELSE()
    MESSAGE(FATAL_ERROR "System ${CMAKE_SYSTEM_NAME} is not supported!")
ENDIF()

SET(PACKAGE_EXCLUDE_GENERAL "${PACKAGE_EXCLUDE_GENERAL}|.git|cmake|CMakeLists.txt|~|.gitignore")

################################################################################
# Installation rules
################################################################################
INSTALL(DIRECTORY .
        DESTINATION ${CPACK_PACKAGE_DEFAULT_LOCATION}
        REGEX "${PACKAGE_EXCLUDE_GENERAL}|${PACKAGE_EXCLUDE_PLATFORM}" EXCLUDE
        PATTERN "build" EXCLUDE)

INCLUDE(CPack)
